--- a/RBOT_101/RBOT101_Notes/rbot_101.tex
+++ b/RBOT_101/RBOT101_Notes/rbot_101.tex
@@ -78,6 +78,7 @@
 \newtheorem{definition}{Definition}[]
 %\newtheorem{theorem}{Theorem}[]
 \newtheorem{example}{Example}
+\newtheorem{quiz}{Quiz}
 \newtheorem{homework}{Homework}
 %\usepackage[pagebackref=true,breaklinks=true,bookmarks=true]{hyperref}
 \usepackage[pagebackref=true,breaklinks=true,colorlinks=true, citecolor=green,linkcolor=light-blue,urlcolor=blue,bookmarks=true]{hyperref}
@@ -125,9 +126,9 @@
 
 \newpage
 \input{sections/intro}
+\input{sections/opt_rot}
 \input{sections/robo_confs}
 \input{sections/rigid_motions}
-\input{sections/opt_rot}
 %\input{sections/manip_kine}
 %%\input{sections/statics_vel_kine}
 %\input{sections/dyna_cont}
