write ICP algorithm at 4am

--- a/RBOT_101/RBOT101_Notes/biblio.bib
+++ b/RBOT_101/RBOT101_Notes/biblio.bib
@@ -12,6 +12,13 @@ volume = {34},
 year = {1978}
 };
 
+@misc{homeomorphic,
+author={Weisstein, Eric W.},
+title={Homeomorphic.}
+howphublished = {\url{https://mathworld.wolfram.com/Homeomorphic.html}}
+note={Accessed December 20, 2020}
+};
+
 @inproceedings{besl1992method,
   title={Method for registration of 3-D shapes},
   author={Besl, Paul J and McKay, Neil D},
@@ -20,6 +27,17 @@ year = {1978}
   pages={586--606},
   year={1992},
   organization={International Society for Optics and Photonics}
+};
+
+@article{horn1987closed,
+  title={Closed-form solution of absolute orientation using unit quaternions},
+  author={Horn, Berthold KP},
+  journal={Josa a},
+  volume={4},
+  number={4},
+  pages={629--642},
+  year={1987},
+  publisher={Optical Society of America}
 };
 
 @article{D3VO,
