--- a/RBOT_101/RBOT101_Notes/rbot_101.tex
+++ b/RBOT_101/RBOT101_Notes/rbot_101.tex
@@ -76,8 +76,7 @@
 
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[]
-%\newtheorem{theorem}{Theorem}[]
-\newtheorem{example}{Example}
+\newtheorem{example}{Example}[]
 \newtheorem{quiz}{Quiz}
 \newtheorem{homework}{Homework}
 %\usepackage[pagebackref=true,breaklinks=true,bookmarks=true]{hyperref}
@@ -126,6 +125,7 @@
 
 \newpage
 \input{sections/intro}
+\input{sections/matrices}
 \input{sections/opt_rot}
 \input{sections/robo_confs}
 \input{sections/rigid_motions}
