--- a/RBOT_101/RBOT101_Notes/sections/opt_rot.tex
+++ b/RBOT_101/RBOT101_Notes/sections/opt_rot.tex
@@ -533,6 +533,6 @@ and the positions of the data shape point set are] then updated via $P=\bm{q}(P)
 	\end{algorithmic}
 \end{algorithm}
 
-\begin{Example}
-	content...
-\end{Example}
+%\begin{Example}
+%	content...
+%\end{Example}
