--- a/RBOT_101/RBOT101_Notes/sections/opt_rot.tex
+++ b/RBOT_101/RBOT101_Notes/sections/opt_rot.tex
@@ -1,4 +1,4 @@
-\chapter{Objects' Alignment in Robotics.}  
+\chapter{Registration of Objects in Robotics.}  
  \label{chap:opt_rot::intro}
  
  In this chapter, we are concerned with the problem of optimally aligning two vectors, a model point/shape to a ``sensed" or measured point/shape in space \eg $\nu_1, \nu_2 \in \mathbb{R}^n$ to one another with the minimal amount of errors.
